# f5-ai-guardrails

./: .gitignore  README.md  app.py  requirements.txt
.github/workflows/: build-and-push.yaml
deploy/helm/: Makefile  rag-values.yaml.example
deploy/helm/rag/: Chart.yaml  values.yaml
deploy/helm/rag/templates/: _helpers.tpl  configmap-suggested-questions.yaml  deployment.yaml  route.yaml  service.yaml
docs/: F5_AI_Guardrails_Demo_Use_Cases.md  ai_guardrails_use_cases.md  installing_f5_ai_guardrails.md  troubleshooting.md  upgrading_f5_ai_guardrails.md
frontend/: CHANGES.md  Containerfile  dev-on-cluster.sh  pyproject.toml  start.sh
frontend/llama_stack_ui/distribution/ui/: app.py
frontend/llama_stack_ui/distribution/ui/modules/: api.py  guardrails_storage.py  utils.py
frontend/llama_stack_ui/distribution/ui/page/distribution/: models.py  vector_dbs.py
frontend/llama_stack_ui/distribution/ui/page/playground/: chat.py
